--- a/config/style.css
+++ b/config/style.css
@@ -4,9 +4,9 @@
     background: black;
     width: 100%;
     height: 100%;
-  }
-  
-  #load img {
+}
+
+#load img {
     position: fixed;
     top: 15%;
     left: 30%;
@@ -15,9 +15,9 @@
     width: 40%;
     height: auto;
     animation: loding 850ms cubic-bezier(0.31, 0.16, 0.04, 1.16) 0s infinite normal forwards;
-  }
-  
-  #load h1 {
+}
+
+#load h1 {
     position: fixed;
     top: 80%;
     color: white;
@@ -27,5 +27,18 @@
     background: black;
     width: 40%;
     height: auto;
-  }
-  
+}
+
+@keyframes loding {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
