--- a/config/style.css
+++ b/config/style.css
@@ -48,3 +48,11 @@ button {
     border:none;
     background:white;
 }
+
+.run {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
