--- a/config/style.css
+++ b/config/style.css
@@ -57,6 +57,10 @@ button {
   transform: translate(-50%, -50%);
 }
 
+.export {
+    position: absolute;
+    right:2%;
+}
 #logs {
     font-family: sans-serif;
     font-size: 17px;
