--- a/config/style.css
+++ b/config/style.css
@@ -61,14 +61,21 @@ button {
     position: absolute;
     right:2%;
 }
+
+.export {
+    position: absolute;
+    right:12%;
+}
+
 #logs {
     font-family: sans-serif;
     font-size: 17px;
+    overflow: scroll;
     position: fixed;
-    max-height: 50vh;
+    max-height: 70vh;
     min-height: 20vh;
     word-break: break-all;
-    bottom: 5vh;
+    bottom: 15vh;
     width: 20vw;
 }
 
@@ -78,4 +85,75 @@ button {
 .h:hover {
     z-index:1;
     width: 43% !important;
+}
+
+form {font-family: Arial, Helvetica, sans-serif;}
+form {box-sizing: border-box;}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
