--- a/config/style.css
+++ b/config/style.css
@@ -59,12 +59,14 @@ button {
 
 .export {
     position: absolute;
-    right:2%;
+    right: 18%;
+    top: 2px;
 }
 
 .publish {
     position: absolute;
-    right:12%;
+    right: 2%;
+    top: 2px;
 }
 
 #logs {
