--- a/config/style.css
+++ b/config/style.css
@@ -110,8 +110,8 @@ form {box-sizing: border-box;}
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  top: 3vh;
+  right: 0%;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
@@ -125,7 +125,7 @@ form {box-sizing: border-box;}
 
 /* Full-width input fields */
 .form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
+  width: 90%;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
